# TaskCardsBackend

./: .pre-commit-config.yaml  app.py  pyproject.toml
backend/: app.py  extensions.py
backend/admin/: __init__.py  task_item.py  topic.py
backend/constants/: paths.py
backend/data/day_compositions/: balanced_weekend.yaml
backend/data/templates/: balanced_weekend.yaml
backend/models/: __init__.py  colors.py  day_composition.py  domain_type.py  domains.py  errors.py  pokemon_type.py  task_item.py  template.py  utils.py
backend/routes/: api.py  task_item.py
backend/serializers/: __init__.py  task_item.py  topic.py
backend/services/: day_composition_loader.py  template_loader.py
migrations/versions/: 2b2fe4b939eb_move_domain_sort_order_to_topic.py  3c92851e5a34_add_topic_sort_order_to_task_item.py  4a25df22455d_.py
