[project]
name = "backend"
version = "0.1.0"
description = ""
packages = [
    { include = "backend" }
]
authors = [
    {name = "Bhargav"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-admin (>=2.0.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[dependency-groups]
dev = [
    "mypy (>=1.19.1,<2.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
ignore = [".venv", "venv", "__pycache__"]
ignore-paths = ["^migrations/.*$"]